output_data/action-remaker/TS/passed/vueuse_69366688562/out/log.txt
##[group]Operating System
Ubuntu
22.04
LTS
##[endgroup]
##[group]Run pnpm/action-setup@v4
##[endgroup]
::group::Running self-installer...
Progress: resolved 1, reused 0, downloaded 0, added 0
Packages: +1
+
Progress: resolved 1, reused 0, downloaded 1, added 1, done

dependencies:
+ pnpm 10.28.2 (11.0.8 is available)

Done in 1s
::endgroup::
Installation Completed!
##[group]Run actions/setup-node@v4
##[endgroup]
::debug::isExplicit: 
::debug::explicit? false
::debug::isExplicit: 16.20.2
::debug::explicit? true
::debug::isExplicit: 18.19.1
::debug::explicit? true
::debug::isExplicit: 20.11.1
::debug::explicit? true
::debug::evaluating 3 versions
::debug::matched: 20.11.1
::debug::checking cache: /opt/hostedtoolcache/node/20.11.1/x64
::debug::Found tool in cache node 20.11.1 x64
Found in cache @ /opt/hostedtoolcache/node/20.11.1/x64
::group::Environment details
node: v20.11.1
npm: 10.2.4
yarn: 1.22.21
::endgroup::
##[add-matcher]/home/github/69366688562/actions/actions-setup-node@v4/.github/tsc.json
##[add-matcher]/home/github/69366688562/actions/actions-setup-node@v4/.github/eslint-stylish.json
##[add-matcher]/home/github/69366688562/actions/actions-setup-node@v4/.github/eslint-compact.json
##[group]Run npm i -g @antfu/ni
##[endgroup]
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: '@antfu/ni@30.1.0',
npm WARN EBADENGINE   required: { node: '>=20.19.0' },
npm WARN EBADENGINE   current: { node: 'v20.11.1', npm: '10.2.4' }
npm WARN EBADENGINE }

added 7 packages in 578ms

2 packages are looking for funding
  run `npm fund` for details
##[group]Run nci
##[endgroup]
file:///opt/hostedtoolcache/node/20.11.1/x64/lib/node_modules/@antfu/ni/dist/src-Dc2SIy_D.mjs:9
import { styleText } from "node:util";
         ^^^^^^^^^
SyntaxError: The requested module 'node:util' does not provide an export named 'styleText'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:132:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:214:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:329:24)
    at async loadESM (node:internal/process/esm_loader:28:7)
    at async handleMainPromise (node:internal/modules/run_main:113:12)

Node.js v20.11.1

##[error]Process completed with exit code 1.
